--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <link href="css/style.css" rel="stylesheet">
-  <title>Maycon Paqui - About</title>
+  <title>Igor Kapitanov - About</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row">
         <div class="col mr-auto">
-          <a href="index.html" class="header-logo col"> Maycon Paqui</a>
+          <a href="index.html" class="header-logo col">Igor Kapitanov</a>
         </div>
         <nav class="header-menu">
           <ul>
@@ -34,12 +34,11 @@
     <div class="about">
       <div class="container">
         <div class="row">
-          <div class="col-6"><img src="img/Eu-about.svg" alt="Me"></div>
+          <div class="col-6"><img src="img/3.jpg" alt="Me"></div>
           <div class="about-text col-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc commodo nisl ipsum, quis mollis ipsum fermentum vitae. Praesent quam velit, pretium non erat nec, aliquet dapibus erat. Suspendisse dapibus arcu at purus pellentesque, ut mattis elit scelerisque. Suspendisse hendrerit lorem massa, id aliquam nulla rhoncus eget. Pellentesque enim lacus, rhoncus ut nulla at, gravida ultrices erat. Sed ac iaculis ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque efficitur vitae ipsum id finibus. </p>
-
-
-            <p>Etiam facilisis semper nisl ac porta. Integer fermentum tincidunt mauris quis gravida. Suspendisse in maximus ligula, quis rutrum nisl. Sed ullamcorper, justo gravida varius rutrum, est metus lacinia lorem, eget posuere sem ipsum eu eros. Aliquam quis tellus ac libero malesuada tempor. Nunc iaculis sed nisi a dignissim. </p>
+            <p>I am a specialist in technical support with extensive experience in providing friendly and professional customer service. I have a proven track record for resolving complex complaints of customers and problems, as well as excellent interpersonal communication skills that brought me awards to recognize and a high level of customer satisfaction. </p>
+            <p>In my work, I focus on automation and quick solution to customer problems. I am passionate about the provision of the best possible experience for each client, and I strive to find solutions that meet their needs and surpass their expectations.</p>
+            <p>Now I am looking for the position of team leader of technical support or SysOps, where I can continue to develop my career in management, using my skills and experience in order to lead a team of devoted specialists. I am sure that my experience, skills, and adherence to customer service will make me an asset to any organization.</p>
           </div>
         </div>
       </div>
@@ -50,12 +49,12 @@
     <div class=" container">
       <div class="row">
         <div class="col-3 mr-auto">
-          <p>&copy; Maycon Paqui</p>
+          <p>&copy; Igor Kapitanov</p>
         </div>
         <div class="social-networks">
-          <a href="https://github.com/Mayconpm" target="_blank"><img src="img/github.svg" alt=""></a>
-          <a href="" target="_blank"><img src="img/linkendin.svg" alt=""></a>
-          <a href="https://www.facebook.com/maycon.marciano" target="_blank"><img src="img/facebook.svg" alt=""></a>
+          <a href="https://github.com/ikapitanov?tab=repositories" target="_blank"><img src="img/github.svg" alt=""></a>
+          <a href="https://www.linkedin.com/in/igor-kapitanov/" target="_blank"><img src="img/linkendin.svg" alt=""></a>
+          <a href="https://www.facebook.com/profile.php?id=100001185819967" target="_blank"><img src="img/facebook.svg" alt=""></a>
         </div>
       </div>
     </div>
