--- a/index.html
+++ b/index.html
@@ -54,16 +54,34 @@
 
     <section class="home-projects animation-2">
       <div class="container ">
-        <h2>Recent Projects</h2>
+        <h2>My Certificates</h2>
+        
         <div class="row justify-content-center">
-          <div class="col-4"><img src="img/scripts.jpg" alt="project"></div>
+          <div class="col-4"><img src="" alt="project"></div>
           <div class="col-6">
             <h3>Project 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus viverra, mauris at semper placerat, eros libero maximus enim, sit amet iaculis neque tortor id lectus. In luctus felis sed velit aliquet, sed convallis nisi congue. Sed malesuada, nibh nec rutrum elementum, lacus nisl volutpat urna, sed pellentesque ex arcu a diam. Cras non tellus vel sapien porttitor viverra. </p>
+            <ul class="link-list">
+              <li><a href="https://www.credly.com/badges/3da23abe-0d95-48ea-95ca-535f94b60364/linked_in_profile"
+                target="_blank">Google IT Support</a></li>
+              <li>
+              <a href="https://drive.google.com/file/d/10KKLf_bqomBMDW3YjqChFWXyBuIA_DaN/view?usp=sharing" 
+              target="_blank">Google Workspace Administrator</a></li>
+              <li>
+              <a href="https://drive.google.com/file/d/1dboIWrWan04ULvAB3zxS8Rlws6YtY6PC/view?usp=sharing"
+              target="_blank">Acronis Tech Professional</a></li>
+              <li>
+              <a href="https://drive.google.com/file/d/1SbbhO-8ui-2Wu7LRZTiQVFYUEhjoqexO/view?usp=sharing"
+              target="_blank">Sophos Engineer</a></li>
+              <li>
+              <a href="https://www.credly.com/badges/cdff4cdd-ef86-483d-ad14-92244f8e15a8/public_url"
+              target="_blank">Microsoft Azure</a></li>
+            </ul>
+            <p></p>
           </div>
         </div>
       </div>
     </section>
+    
 
   </main>
 
