--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <link href="css/style.css" rel="stylesheet">
-  <title>Maycon Paqui - Projects</title>
+  <title>Igor Kapitanov - Projects</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col mr-auto">
-          <a href="index.html" class="header-logo col"> Maycon Paqui</a>
+          <a href="index.html" class="header-logo col">Igor Kapitanov</a>
         </div>
         <nav class="header-menu">
           <ul>
@@ -34,10 +34,11 @@
       <div class="container">
         <h2>Recent Projects</h2>
         <div class="row justify-content-center">
-          <div class="col-4"><img src="img/project.svg" alt="project"></div>
           <div class="col-8">
-            <h3>Project 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus viverra, mauris at semper placerat, eros libero maximus enim, sit amet iaculis neque tortor id lectus. In luctus felis sed velit aliquet, sed convallis nisi congue. Sed malesuada, nibh nec rutrum elementum, lacus nisl volutpat urna, sed pellentesque ex arcu a diam. Cras non tellus vel sapien porttitor viverra. </p>
+            <h4>Simply Smart Home</h4>
+            <p>Creation of infrastructure for Microsoft Azure from scratch. Transfer and configuration of the acting environment from it-break to the cloud. Support for all processes for the uninterrupted work of a customer production</p><br>
+            <h4>Gillam Group</h4>
+            <p>Support for more than 120 users. Administration of resources of it is also in the Microsoft Azure. Configuration Micosoft Intune, Autopilot and JAMF. Creation of security policy and end user training.</p>
           </div>
         </div>
       </div>
@@ -48,12 +49,12 @@
     <div class=" container">
       <div class="row">
         <div class="col-3 mr-auto">
-          <p>&copy; Maycon Paqui</p>
+          <p>&copy; Igor Kapitanov</p>
         </div>
         <div class="social-networks">
-          <a href="https://github.com/Mayconpm" target="_blank"><img src="img/github.svg" alt=""></a>
-          <a href="" target="_blank"><img src="img/linkendin.svg" alt=""></a>
-          <a href="https://www.facebook.com/maycon.marciano" target="_blank"><img src="img/facebook.svg" alt=""></a>
+          <a href="https://github.com/ikapitanov?tab=repositories" target="_blank"><img src="img/github.svg" alt=""></a>
+          <a href="https://www.linkedin.com/in/igor-kapitanov/" target="_blank"><img src="img/linkendin.svg" alt=""></a>
+          <a href="https://www.facebook.com/profile.php?id=100001185819967" target="_blank"><img src="img/facebook.svg" alt=""></a>
         </div>
       </div>
     </div>
