--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
           <p>&copy; Igor Kapitanov</p>
         </div>
         <div class="social-networks">
-          <a href="https://github.com/ikapitanov?tab=repositories" target="_blank"><img src="img/github.svg" alt=""></a>
+          <a href="https://github.com/igor-kapitanov?tab=repositories" target="_blank"><img src="img/github.svg" alt=""></a>
           <a href="https://www.linkedin.com/in/igor-kapitanov/" target="_blank"><img src="img/linkendin.svg" alt=""></a>
           <a href="https://www.facebook.com/profile.php?id=100001185819967" target="_blank"><img src="img/facebook.svg" alt=""></a>
         </div>
