--- a/index.html
+++ b/index.html
@@ -52,15 +52,12 @@
       </div>
     </section>
 
-    <section class="home-projects animation-2">
+    <!--<section class="home-certs animation-2">
       <div class="container ">
-        <h2>My Certificates</h2>
-        
         <div class="row justify-content-center">
-          <div class="col-4"><img src="" alt="project"></div>
           <div class="col-6">
-            <h3>Project 1</h3>
             <ul class="link-list">
+              <ul>
               <li><a href="https://www.credly.com/badges/3da23abe-0d95-48ea-95ca-535f94b60364/linked_in_profile"
                 target="_blank">Google IT Support</a></li>
               <li>
@@ -76,13 +73,10 @@
               <a href="https://www.credly.com/badges/cdff4cdd-ef86-483d-ad14-92244f8e15a8/public_url"
               target="_blank">Microsoft Azure</a></li>
             </ul>
-            <p></p>
           </div>
         </div>
       </div>
-    </section>
-    
-
+    </section>-->
   </main>
 
   <footer>
@@ -92,7 +86,7 @@
           <p>&copy; Igor Kapitanov</p>
         </div>
         <div class="social-networks">
-          <a href="https://github.com/ikapitanov?tab=repositories" target="_blank"><img src="img/github.svg" alt=""></a>
+          <a href="https://github.com/igor-kapitanov?tab=repositories" target="_blank"><img src="img/github.svg" alt=""></a>
           <a href="https://www.linkedin.com/in/igor-kapitanov/" target="_blank"><img src="img/linkendin.svg" alt=""></a>
           <a href="https://www.facebook.com/profile.php?id=100001185819967" target="_blank"><img src="img/facebook.svg" alt=""></a>
         </div>
