--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <link href="css/style.css" rel="stylesheet">
-  <title>Maycon Paqui - Contact</title>
+  <title>Igor Kapitanov - Contact</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col mr-auto">
-          <a href="index.html" class="header-logo col"> Maycon Paqui</a>
+          <a href="index.html" class="header-logo col"> Igor Kapitanov</a>
         </div>
         <nav class="header-menu">
           <ul>
@@ -54,12 +54,12 @@
     <div class=" container">
       <div class="row">
         <div class="col-3 mr-auto">
-          <p>&copy; Maycon Paqui</p>
+          <p>&copy; Igor Kapitanov</p>
         </div>
         <div class="social-networks">
-          <a href="https://github.com/Mayconpm" target="_blank"><img src="img/github.svg" alt=""></a>
-          <a href="" target="_blank"><img src="img/linkendin.svg" alt=""></a>
-          <a href="https://www.facebook.com/maycon.marciano" target="_blank"><img src="img/facebook.svg" alt=""></a>
+          <a href="https://github.com/igor-kapitanov?tab=repositories" target="_blank"><img src="img/github.svg" alt=""></a>
+          <a href="https://www.linkedin.com/in/igor-kapitanov/" target="_blank"><img src="img/linkendin.svg" alt=""></a>
+          <a href="https://www.facebook.com/profile.php?id=100001185819967" target="_blank"><img src="img/facebook.svg" alt=""></a>
         </div>
       </div>
     </div>
