--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="col-6 mr-auto">
             <p>Hi, I am</p>
             <h1>Igor Kapitanov</h1>
-            <p class="mb-4"> <p>IT Specialist with over 7 years of experience with CCNA, Google IT Support, Google Workspace, and Google IT Automation certifications, specializing in system administration and cloud management (Azure, GCP, AWS).
+            <p class="mb-4"> IT Specialist with over 7 years of experience with CCNA, Google IT Support, Google Workspace, and Google IT Automation certifications, specializing in system administration and cloud management (Azure, GCP, AWS).
               Strong analytical skills and ability to solve problems.
               A team player who builds relationships based on trust and integrity.</p>
             <div class="text-center">
